# docker-launcher

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  boot.py  docker-launcher.spec  pyproject.toml  vulture_whitelist.py
.claude/: CLAUDE.md  settings.local.json
.claude/skills/adr-recorder/: SKILL.md
.claude/skills/fe-dev/: SKILL.md
.claude/skills/github-board/: SKILL.md
.claude/skills/lint-test/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/release-review/: SKILL.md
.claude/skills/ticket-workflow/: SKILL.md
.github/workflows/: release.yml
docs/adr/: 0001-fastapi-backend-with-single-html-frontend.md  0002-local-docker-images-from-dockerfiles-in-git.md  0003-llm-gateway-proxy-baked-into-image.md  0004-json-file-for-container-metadata.md  adr.md
docs/releases/v0.1.0/: pr_review_response.md  pr_review_result.md  release-report.html  reviewer_notes.md
docs/releases/v0.2.0/: pr_review_response.md  pr_review_result.md  release-report.html  reviewer_notes.md
docs/releases/v0.3.0/: pr_review_response.md  pr_review_result.md  release-report.html  reviewer_notes.md
images/base/: Dockerfile  metadata.json
images/base/assets/: fetch-claude-installer.ps1  start.sh
images/base/assets/templates/: CLAUDE.md  pyproject.toml
images/base/assets/templates/.claude/skills/sync/: SKILL.md
src/docker_launcher/: _auth_defaults.py  database.py  docker_service.py  main.py  prerequisites.py  update_service.py
tests/: conftest.py  test_api.py  test_database.py  test_docker_service.py  test_prerequisites.py  test_update_service.py
(+2 files in other folders)
