[project]
name = "docker-launcher"
version = "0.2.0"
description = "Local dashboard for spinning up Docker dev containers with Claude Code"
requires-python = ">=3.13"
dependencies = [
    "docker>=7.1.0",
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
]

[project.scripts]
docker-launcher = "docker_launcher.main:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyinstaller>=6.19.0",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
    "types-docker>=7.1.0.20260109",
    "vulture>=2.15",
]
